// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders 1`] = `
<ReadifySignatureContainer
  CopyRepliesAndForwardsHtml={
    <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />
  }
  CopyRepliesAndForwardsText={
    <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />
  }
  CopySignatureHtml={
    <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />
  }
  CopySignatureText={
    <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />
  }
  signatureProps={
    Object {
      "email": "your.name@readify.net",
      "isSupport": false,
      "mobile": "+61 111 222 333",
      "name": "your name",
      "qualifications": undefined,
      "title": "Job Title",
      "twitter": "@myTwitter",
    }
  }
/>
`;

exports[`Renders with support fields 1`] = `
<ReadifySignatureContainer
  CopyRepliesAndForwardsHtml={
    <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />
  }
  CopyRepliesAndForwardsText={
    <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />
  }
  CopySignatureHtml={
    <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />
  }
  CopySignatureText={
    <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />
  }
  signatureProps={
    Object {
      "email": "your.name@readify.net",
      "isSupport": true,
      "mobile": "+61 111 222 333",
      "name": "your name",
      "qualifications": undefined,
      "title": "Job Title",
      "twitter": "@myTwitter",
    }
  }
/>
`;
